-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
None
-
Windows 10
-
-
f142bd121 (dev), 660a63d73 (6.9), df16ccaf0 (6.8)
QFileDialog shows incorrectly rendered drive icons on screen with non-integer device pixel ratio (without pass-through scaling). The icon for "My Computer" and folder icons appear correct.
To reproduce, compile and execute attached code and run under Windows (10) with a font scaling of 150%. Then select "My Computer" from the dialog's combo box and then select a drive. The combo box shows a distorted drive icon. See attached screenshot.
Note that the code uses a proxy style to generate 'larger than default' icons.